UF-9504: Add municipalityId and update MessagingIntegration